--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>GeoQuiz</title>
+  <title>Géo-Quiz</title>
 
   <!-- PWA -->
   <link rel="manifest" href="manifest.json">
@@ -23,7 +23,7 @@
 
   <div class="header-left"></div>
 
-  <h1 class="logo">🌍 GeoQuiz</h1>
+  <h1 class="logo">🌍 Géo-Quiz</h1>
 
   <div class="header-right">
 
