--- a/menu.html
+++ b/menu.html
@@ -40,16 +40,16 @@
         <div class="xp-bar">
           <div id="xpFill"></div>
         </div>
-        <div id="rank"></div>
       </div>
     </div>
 
     <!-- MODE CLAIR / SOMBRE -->
-    <div class="theme-toggle-premium" id="themeToggle">
-      <div class="toggle-circle">
-       <span class="icon sun">☀️</span>
-       <span class="icon moon">🌙</span>
-     </div>
+    <div class="theme-toggle">
+      🌙
+      <label class="switch">
+        <input type="checkbox" id="themeSwitch">
+        <span class="slider"></span>
+      </label>
     </div>
 
   </div>
