--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
 
 <header class="main-header">
 
+  <!-- Badge XP -->
+  <div class="xp-badge">
+    ⭐ <span id="xpValue">0</span> XP
+  </div>
+
   <div class="header-left"></div>
 
   <!-- TITRE CENTRÉ -->
@@ -40,16 +45,17 @@
         <div class="xp-bar">
           <div id="xpFill"></div>
         </div>
+
         <div id="rank"></div>
       </div>
     </div>
 
-    <!-- MODE CLAIR / SOMBRE -->
+    <!-- Toggle Soleil / Lune -->
     <div class="theme-toggle-premium" id="themeToggle">
       <div class="toggle-circle">
-       <span class="icon sun">☀️</span>
-       <span class="icon moon">🌙</span>
-     </div>
+        <span class="icon sun">☀️</span>
+        <span class="icon moon">🌙</span>
+      </div>
     </div>
 
   </div>
@@ -59,7 +65,7 @@
 <main class="centered landing">
 
   <h2 class="welcome-title">
-    Bienvenue sur <span class="gradient-text">GeoQuiz App</span>
+    Bienvenue sur <span class="gradient-text">Géo-Quiz</span>
   </h2>
 
   <p class="subtitle">
@@ -87,6 +93,23 @@
 </main>
 
 <!-- =========================
+        POPUP UPDATE
+========================= -->
+
+<div id="updatePopup" class="update-popup hidden">
+  🚀 Nouvelle version disponible
+  <button onclick="updateApp()">Mettre à jour</button>
+</div>
+
+<!-- =========================
+        INDICATEUR OFFLINE
+========================= -->
+
+<div id="offlineIndicator" class="offline-indicator hidden">
+  📡 Mode hors ligne
+</div>
+
+<!-- =========================
          SCRIPTS
 ========================= -->
 
@@ -96,14 +119,78 @@
 <script src="js/transition.js"></script>
 <script src="js/navigation.js"></script>
 
-<!-- SERVICE WORKER -->
+<!-- SERVICE WORKER + FEATURES PREMIUM -->
 <script>
+
 if ("serviceWorker" in navigator) {
+
   window.addEventListener("load", () => {
+
     navigator.serviceWorker.register("service-worker.js")
+      .then(reg => {
+
+        /* Détection nouvelle version */
+        reg.onupdatefound = () => {
+
+          const newWorker = reg.installing;
+
+          newWorker.onstatechange = () => {
+
+            if (
+              newWorker.state === "installed" &&
+              navigator.serviceWorker.controller
+            ) {
+              document
+                .getElementById("updatePopup")
+                .classList.remove("hidden");
+            }
+
+          };
+        };
+
+      })
       .catch(() => {});
   });
 }
+
+/* Update silencieuse */
+function updateApp(){
+
+  navigator.serviceWorker.getRegistration().then(reg => {
+
+    if(reg && reg.waiting){
+      reg.waiting.postMessage("SKIP_WAITING");
+    }
+
+    window.location.reload();
+  });
+}
+
+/* Indicateur offline */
+function updateOnlineStatus(){
+
+  const indicator = document.getElementById("offlineIndicator");
+
+  if(!navigator.onLine){
+    indicator.classList.remove("hidden");
+  } else {
+    indicator.classList.add("hidden");
+  }
+}
+
+window.addEventListener("online", updateOnlineStatus);
+window.addEventListener("offline", updateOnlineStatus);
+updateOnlineStatus();
+
+/* XP Badge update */
+document.addEventListener("DOMContentLoaded", () => {
+
+  if(typeof updateXPBadge === "function"){
+    updateXPBadge();
+  }
+
+});
+
 </script>
 
 </body>
