--- a/index.html
+++ b/index.html
@@ -2,19 +2,33 @@
 <html lang="fr">
 <head>
 
+  <!-- META BASIQUE -->
   <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <title>Géo-Quiz | Accueil</title>
+
+  <!-- SEO -->
+  <meta name="description" content="Jeu éducatif de Géographie et Histoire avec niveaux, XP et défis.">
+  <meta name="author" content="Géo-Quiz">
 
   <!-- PWA -->
   <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#00f2fe">
+  <link rel="apple-touch-icon" href="icons/icon.png">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+
+  <!-- PERFORMANCE FONTS -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+  <!-- GOOGLE FONTS -->
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 
   <!-- CSS -->
   <link rel="stylesheet" href="css/style.css">
-
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 
 </head>
 
@@ -79,6 +93,7 @@
       id="usernameInput" 
       placeholder="Entrez votre pseudo"
       maxlength="15"
+      autocomplete="off"
     >
     <button id="saveBtn" class="main-btn">
       Valider
@@ -86,7 +101,7 @@
   </div>
 
   <!-- BOUTON START -->
-  <button id="startBtn" class="main-btn big-btn" style="display:none;">
+  <button id="startBtn" class="main-btn big-btn hidden">
     🚀 Commencer l'aventure
   </button>
 
@@ -113,11 +128,11 @@
          SCRIPTS
 ========================= -->
 
-<script src="js/stats.js"></script>
-<script src="js/user.js"></script>
-<script src="js/theme.js"></script>
-<script src="js/transition.js"></script>
-<script src="js/navigation.js"></script>
+<script src="js/stats.js" defer></script>
+<script src="js/user.js" defer></script>
+<script src="js/theme.js" defer></script>
+<script src="js/transition.js" defer></script>
+<script src="js/navigation.js" defer></script>
 
 <!-- SERVICE WORKER + FEATURES PREMIUM -->
 <script>
@@ -129,7 +144,6 @@ if ("serviceWorker" in navigator) {
     navigator.serviceWorker.register("service-worker.js")
       .then(reg => {
 
-        /* Détection nouvelle version */
         reg.onupdatefound = () => {
 
           const newWorker = reg.installing;
@@ -153,7 +167,7 @@ if ("serviceWorker" in navigator) {
   });
 }
 
-/* Update silencieuse */
+/* UPDATE SILENCIEUSE */
 function updateApp(){
 
   navigator.serviceWorker.getRegistration().then(reg => {
@@ -166,7 +180,7 @@ function updateApp(){
   });
 }
 
-/* Indicateur offline */
+/* INDICATEUR ONLINE / OFFLINE */
 function updateOnlineStatus(){
 
   const indicator = document.getElementById("offlineIndicator");
@@ -182,7 +196,7 @@ window.addEventListener("online", updateOnlineStatus);
 window.addEventListener("offline", updateOnlineStatus);
 updateOnlineStatus();
 
-/* XP Badge update */
+/* XP BADGE */
 document.addEventListener("DOMContentLoaded", () => {
 
   if(typeof updateXPBadge === "function"){
