--- a/difficulty.html
+++ b/difficulty.html
@@ -7,7 +7,7 @@
 </head>
 <body class="centered">
 
-<h2>Choisissez votre difficulté</h2>
+<h2>Choisissez votre difficulté</h2>s
 
 <div class="difficulty-grid">
   <div class="difficulty-card easy" onclick="chooseDifficulty('easy')">
