--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
 
   <!-- TITRE CENTRÉ -->
   <h1 class="logo centered-title">
-    🌍 Géo-Quiz & 📜 Histo-Quiz
+    <img src="icons/icon.png" alt="Géo-Quiz" class="title-icon">
+    Géo-Quiz & Histo-Quiz
   </h1>
 
   <div class="header-right">
