--- a/menu.html
+++ b/menu.html
@@ -25,9 +25,10 @@
   <div class="header-left"></div>
 
   <!-- TITRE CENTRÉ -->
-  <h1 class="logo centered-title">
-    🌍 Géo-Quiz & 📜 Histo-Quiz
-  </h1>
+    <h1 class="logo centered-title">
+    <img src="icons/icon.png" alt="Géo-Quiz" class="title-icon">
+      Géo-Quiz & Histo-Quiz
+    </h1>
 
   <div class="header-right">
 
