--- a/quiz.html
+++ b/quiz.html
@@ -24,8 +24,9 @@
   <div></div>
 
   <!-- 🔥 Titre dynamique -->
-  <h1 class="logo" id="quizTitle">
-    🌍 Quiz
+  <h1 class="logo centered-title">
+    <img src="icons/icon.png" alt="Géo-Quiz" class="title-icon">
+    Géo-Quiz & Histo-Quiz
   </h1>
 
   <div class="player-info">
