--- a/themes.html
+++ b/themes.html
@@ -24,7 +24,10 @@
   <div></div>
 
   <!-- 🔥 Titre dynamique -->
-  <h1 class="logo" id="modeTitle">🌍 Geo-Quiz</h1>
+  <h1 class="logo centered-title">
+    <img src="icons/icon.png" alt="Géo-Quiz" class="title-icon">
+    Géo-Quiz & Histo-Quiz
+  </h1>
 
   <div class="player-info">
 
