--- a/offline.html
+++ b/offline.html
@@ -7,7 +7,10 @@
 </head>
 <body class="centered">
 
-<h1>Vous êtes hors ligne</h1>
+<h1 class="logo centered-title">
+  <img src="icons/icon.png" alt="Géo-Quiz" class="title-icon">
+  Vous êtes hors ligne
+</h1>
 <p>Pas d'inquiétude !</p>
 <p>Vous pouvez continuer à jouer aux quiz déjà chargés.</p>
 
