--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
   <!-- TITRE CENTRÉ -->
   <h1 class="logo centered-title">
-    <img src="icons/icon.png" alt="Géo-Quiz" class="title-icon">
+    <img src="/icons/icon.png" alt="Géo-Quiz" class="title-icon">
     Géo-Quiz & Histo-Quiz
   </h1>
 
